--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.spotifystreamer" >
+    package="com.example.android.spotifystreamer">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -8,12 +8,12 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".SearchArtistActivity"
-            android:windowSoftInputMode="stateAlwaysHidden"
+            android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:label="@string/app_name" >
+            android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,11 +23,15 @@
         <activity
             android:name=".TopTracksActivity"
             android:label="@string/title_activity_top_tracks"
-            android:parentActivityName=".SearchArtistActivity" >
+            android:parentActivityName=".SearchArtistActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.android.spotifystreamer.SearchArtistActivity" />
         </activity>
+
+        <provider
+            android:name=".data.TopTracksProvider"
+            android:authorities="com.example.android.spotifystreamer"></provider>
     </application>
 
 </manifest>
