--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity
             android:name=".player.PlayerActivity"
             android:label="@string/title_activity_player"
+            android:launchMode="singleTop"
             android:parentActivityName=".TopTracksActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
